# beitechTest

./: .gitignore  README.md  db.env  db.sql  pyproject.toml
src/: main.py
src/configuration/: app.py  blueprint.py  db.py  swagger.py
src/configuration/static/: swagger.json
src/constant/: connection.py  messages.py  routes.py  values.py
src/controller/: order.py
src/model/: order.py  orderDetail.py  product.py
src/repository/: order.py  product.py
src/service/: order.py
src/tests/: conftest.py
src/tests/integration/: test_integrated_order.py  test_order.py
src/tests/unit/: test_order.py  test_product.py
src/util/: db.py  test.py
